UNOFFICIAL 0.59r-thor6 (Thomas Orgis <thomas@orgis.org>)
-----

- split nedbsd targets for realtime priority selection code; since one needs -lpthread with it. standard netbsd target doesn't use realtime code -- I won't recommend running mpg123 as root anyway!

UNOFFICIAL 0.59r-thor5 (Thomas Orgis <thomas@orgis.org>)
-----

- Separated the the use of char* equalfile as filename from the use as TRUE/FALSE flag by introducing int have_eq_settings. Compilers kept nagging about assigning and integer (TRUE) to char* ... and it feels more right this way.

- Made control_generic aware of real being possibly different than float (seq command used to raise an FPE on OSF1 when this assumption was not the case.

- Fixed the command line arg parsing to work properly on Alpha (32 and 64 bit mixup)

UNOFFICIAL 0.59r-thor4 (Thomas Orgis <thomas@orgis.org>)
-----

- merged with 0.59r-19 from Debian project (Daniel Kobras <kobras@debian.org>), hopefully fixing all those security vulnerabilities
	-> my dirty http_open and open_stream variants now replaced by more proper code
	-> still my (rather workloaded) parsing/processing in control_generic, but now including the idea to watch out for \n, \r\n and \r (or \n\r, for that matter;-)

UNOFFICIAL 0.59r-thor3 (Thomas Orgis <thomas@orgis.org>)
-----

- hacked additional variants of http_open and open_stream that return errors instead of exit()ing; makes more sense when used by a frontend
- further cleanup (and return to using continue instead of nested if(){}else{if()else{}}) in command processing, better error messages there

UNOFFICIAL 0.59r-ThOr(remote-err,eq,flushing) (Thomas Orgis <thomas@orgis.org>)
-----
-added audio_flush() calls to various places in control_generic.c to make sure there is nothing left in there that hurts later (not sure if this has effects)
-(re?)enabled (?) code for stream info